Fix mobile menu z-index issue

--- a/src/scss/_founders.scss
+++ b/src/scss/_founders.scss
@@ -6,7 +6,6 @@ $card-in-between-spacing: 0.5rem;
 }
 .founders {
 	.founders-hero-photo {
-		z-index: -1;
 		width: 100%;
 		min-height: 30rem;	
 		background-color: $blue-background;
@@ -30,6 +29,23 @@ $card-in-between-spacing: 0.5rem;
 
 	.tile {
 		position: relative;
+		overflow:auto;
+	}
+
+	.tile-img {
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		opacity: 0.80;
+		object-fit: cover;
+		object-position: 50% 0;
+		display: block;
+
+		&:hover {
+			cursor:pointer;
+			opacity: 1;
+			transition: ease;
+		}
 	}
 
 	$grid-height: 28rem;
@@ -57,19 +73,13 @@ $card-in-between-spacing: 0.5rem;
 							&:nth-child(1) {
 								width: 50%;
 								height: 100%;
-								background-color: green;
 								margin-right: 0.5 * $grid-separator;
-								background-image: url("../img/founders/blockstack1.jpg");
-								@include cover-photo;
 							}
 							// ELEMENT - FIRST ROW RIGHT
 							&:nth-child(2) {
 								width: 50%;
 								height: 100%;
-								background-color: black;
 								margin-left: 0.5 * $grid-separator;
-								background-image: url("../img/founders/scholly.jpg");
-								@include cover-photo;
 							}
 						}
 					}
@@ -77,10 +87,7 @@ $card-in-between-spacing: 0.5rem;
 					&:nth-child(2) {
 						height: 60%;
 						width: 100%;
-						background-color: orange;
 						margin-top: 0.5 * $grid-separator;
-						background-image: url("../img/founders/brooklinen.jpg");
-						@include cover-photo;
 					}
 				}
 			}
@@ -88,9 +95,6 @@ $card-in-between-spacing: 0.5rem;
 			&:nth-child(2) {
 				margin-left: $grid-separator;
 				width: calc(100% / 3 * 1);
-				background-color: green;
-				background-image: url("../img/founders/fiscalnote.jpg");
-				@include cover-photo;
 			}
 		}
 	}
